[package]
name = "sm_bridge_indexer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
substreams = "0.6"
substreams-solana = "0.14"
bs58 = "0.5"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
